# luna-sysmgr-common

./: CMakeLists.txt  README.md  device-known.pri  sysmgr-common.pro
Src/base/: CoreNaviLeds.cpp  JSONUtils.cpp  Localization.cpp  Utils.cpp
Src/base/application/: ApplicationDescription.cpp  ApplicationDescriptionBase.cpp
Src/base/hosts/: HostArm.cpp  HostArm.h  HostBase.cpp  HostQtDesktop.cpp  HostUnknown.h
Src/base/settings/: DeviceInfo.cpp  LocalePreferences.cpp  Preferences.cpp  Settings.cpp
Src/core/: KeywordMap.cpp
Src/nyx/: NyxSensorConnector.cpp
files/pkgconfig/: LunaSysMgrCommon.pc.in
include/: ApplicationDescriptionBase.h  DeviceInfo.h  HostBase.h  JSONUtils.h  LocalePreferences.h  Settings.h  Utils.h
